--- a/index.html
+++ b/index.html
@@ -22,22 +22,50 @@
 
   <div role="main" class="calculator px-4">
     <div>
-      <label for="bill-input" class="form-label mt-4">Bill</label>
-      <div class="input-group">      
-        <span class="input-group-text add-on fs-3">$</span>
+      <label for="bill-input" class="form-label mt-4 input-label">Bill</label>
+      <div class="input-group">              
         <input type="money" class="form-control text-end fs-2" id="bill-input" placeholder="0">
       </div>
     </div>    
+    <div>
+      <p class="input-label mt-4">Select Tip %</p>
+      <div class="container text-center">
+        <div class="row pb-3">
+          <div class="col-6 px-0">
+            <button type="button" class="btn">5%</button>
+          </div>
+          <div class="col-6 px-0">
+            <button type="button" class="btn">10%</button>
+          </div>
+        </div>
+
+        <div class="row pb-3">
+          <div class="col-6 px-0">
+            <button type="button" class="btn">15%</button>
+          </div>
+          <div class="col-6 px-0">
+            <button type="button" class="btn">25%</button>
+          </div>
+        </div>
+
+        <div class="row pb-3">
+          <div class="col-6 px-0">
+            <button type="button" class="btn">50%</button>
+          </div>
+          <div class="col-6 px-0">
+            <button type="button" class="btn" id="btn1">Custom</button>
+          </div>
+        </div>
+
+      </div>
+      
+      
+    </div>
   </div>
   
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+  
+  
 
   Number of People
 
