--- a/index.html
+++ b/index.html
@@ -30,37 +30,34 @@
     <div>
       <p class="input-label mt-4">Select Tip %</p>
       <div class="container text-center">
-        <div class="row pb-3">
-          <div class="col-6 px-0">
-            <button type="button" class="btn">5%</button>
+        <div class="row pb-2">
+          <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
+            <button type="button" class="btn btn-lg">5%</button>
           </div>
-          <div class="col-6 px-0">
-            <button type="button" class="btn">10%</button>
+          <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
+            <button type="button" class="btn btn-lg">10%</button>
           </div>
-        </div>
-
-        <div class="row pb-3">
-          <div class="col-6 px-0">
-            <button type="button" class="btn">15%</button>
+          <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
+            <button type="button" class="btn btn-lg">15%</button>
+          </div>        
+          <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
+            <button type="button" class="btn btn-lg">25%</button>
           </div>
-          <div class="col-6 px-0">
-            <button type="button" class="btn">25%</button>
+          <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
+            <button type="button" class="btn btn-lg">50%</button>
           </div>
-        </div>
-
-        <div class="row pb-3">
-          <div class="col-6 px-0">
-            <button type="button" class="btn">50%</button>
-          </div>
-          <div class="col-6 px-0">
-            <button type="button" class="btn" id="btn1">Custom</button>
+          <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
+            <button type="button" class="btn btn-lg" id="btn1">Custom</button>
           </div>
         </div>
-
-      </div>
-      
-      
+      </div>            
     </div>
+    <div>
+      <label for="num-ppl-input" class="form-label input-label">Number of People</label>
+      <div class="input-group">              
+        <input type="money" class="form-control text-end fs-2" id="num-ppl-input" placeholder="0">
+      </div>
+    </div>       
   </div>
   
 
