select % tip update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button type="button" class="btn btn-lg">50%</button>
           </div>
           <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-            <button type="button" class="btn btn-lg" id="btn1">Custom</button>
+            <input type="money" class="form-control text-end fs-2" placeholder="Custom">
           </div>
         </div>
       </div>            
@@ -57,14 +57,17 @@
       <div class="input-group">              
         <input type="money" class="form-control text-end fs-2" id="num-ppl-input" placeholder="0">
       </div>
-    </div>       
+    </div>    
+    <!-- <div class="result">
+      <div>
+
+      </div>
+      <button type="button" class="btn btn-lg">Custom</button>
+    </div>    -->
   </div>
   
 
-  
-  
-
-  Number of People
+    
 
   Tip Amount
   / person
