--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <button type="button" class="btn btn-lg">50%</button>
             </div>
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <input type="money" class="form-control text-end fs-2" placeholder="Custom">
+              <input type="money" class="form-control text-end fs-2" id="tip-percent-input" placeholder="Custom">
             </div>
           </div>
         </div>            
@@ -62,26 +62,26 @@
     </div>         
       
     <div class="result col-12 col-sm-6 mt-4 px-4 py-5">      
-      <div class="row">
+      <div class="row mb-3">
         <div class="col-6">
           <p>Tip Amount</p>
-          <p>/ person</p>
+          <p class="unit">/ person</p>
         </div>
-        <div class="col-6">
+        <div class="col-6 text-end">
           <p>0</p>
         </div>                            
       </div>
       
-      <div class="row">
+      <div class="row mb-3">
         <div class="col-6">
           <p>Total</p>
-          <p>/ person</p>
+          <p class="unit">/ person</p>
         </div>
-        <div class="col-6">
+        <div class="col-6 text-end">
           <p>0</p>
         </div>
       </div>
-      <button type="button" class="btn btn-lg">Reset</button>
+      <button type="button" class="btn btn-lg">RESET</button>
     </div>   
 
   </div>
