--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <div role="banner" class="logo text-center">
     <img src="./images/logo.svg" alt="logo">
   </div>
-
-  <div role="main" class="calculator px-4 row">
-    <div class="col-12 col-sm-6">
+  
+  <div role="main" class="calculator row container pb-5 pt-3">
+    <div class="col-sm-6">
       <div>
         <label for="bill-input" class="form-label mt-4 input-label">Bill</label>
         <div class="input-group">              
@@ -48,7 +48,7 @@
               <button type="button" class="btn btn-lg">50%</button>
             </div>
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <input type="money" class="form-control text-end fs-2" id="tip-percent-input" placeholder="Custom">
+              <input type="money" class="form-control text-end fs-3" id="tip-percent-input" placeholder="Custom">
             </div>
           </div>
         </div>            
@@ -61,7 +61,7 @@
       </div>  
     </div>         
       
-    <div class="result col-12 col-sm-6 mt-4 px-4 py-5">      
+    <div class="result col-sm-6 mt-4 px-4 py-5">      
       <div class="row mb-3">
         <div class="col-6">
           <p>Tip Amount</p>
@@ -85,6 +85,7 @@
     </div>   
 
   </div>
+
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
