--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <img src="./images/logo.svg" alt="logo">
   </div>
   
-  <div role="main" class="calculator row container pb-5 pt-3">
-    <div class="col-sm-6">
+  <div role="main" class="calculator row container pb-5 pt-3 gx-5">
+    <div class="col-lg-6">
       <div>
         <label for="bill-input" class="form-label mt-4 input-label">Bill</label>
         <div class="input-group">              
@@ -61,7 +61,7 @@
       </div>  
     </div>         
       
-    <div class="result col-sm-6 mt-4 px-4 py-5">      
+    <div class="result col-lg-6 mt-4 px-4 py-5">      
       <div class="row mb-3">
         <div class="col-6">
           <p>Tip Amount</p>
@@ -82,8 +82,10 @@
         <div class="col-6 text-end">
           $0.00
         </div>
-      </div>
+      </div>      
       <button type="button" class="btn btn-lg">RESET</button>
+
+      
     </div>   
 
   </div>
