--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         <div class="container text-center">
           <div class="row pb-2">
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <button type="button" class="btn btn-lg">5%</button>
+              <button type="button" class="btn btn-lg" id="select-tip">5%</button>
             </div>
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <button type="button" class="btn btn-lg">10%</button>
+              <button type="button" class="btn btn-lg" id="select-tip">10%</button>
             </div>
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <button type="button" class="btn btn-lg">15%</button>
+              <button type="button" class="btn btn-lg" id="select-tip">15%</button>
             </div>        
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <button type="button" class="btn btn-lg">25%</button>
+              <button type="button" class="btn btn-lg" id="select-tip">25%</button>
             </div>
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <button type="button" class="btn btn-lg">50%</button>
+              <button type="button" class="btn btn-lg" id="select-tip">50%</button>
             </div>
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
               <input type="money" class="form-control text-end fs-3" id="tip-percent-input" placeholder="Custom">
@@ -83,7 +83,7 @@
           $0.00
         </div>
       </div>      
-      <button type="button" class="btn btn-lg">RESET</button>
+      <button type="button" class="btn btn-lg" disabled>RESET</button>
 
       
     </div>   
