--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link href="./css/styles.css" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
   <div role="banner" class="logo text-center">
@@ -48,7 +45,7 @@
               <button type="button" class="btn btn-lg" id="select-tip">50%</button>
             </div>
             <div class="col-6 col-sm-4 mb-3 pe-2 px-1">
-              <input type="money" class="form-control text-end fs-3" id="tip-percent-input" placeholder="Custom">
+              <input type="number" class="form-control text-end fs-3" id="tip-percent-input" placeholder="Custom">
             </div>
           </div>
         </div>            
@@ -71,7 +68,7 @@
           <p class="unit">/ person</p>
         </div>
         <div class="col-6 text-end">
-          <p>
+          <p id="tip-amount">
             $0.00
           </p>
         </div>                            
@@ -82,7 +79,7 @@
           <p>Total</p>
           <p class="unit">/ person</p>
         </div>
-        <div class="col-6 text-end">
+        <div class="col-6 text-end" id="total">
           $0.00
         </div>
       </div>      
