--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   
   <div role="main" class="calculator row container pb-5 pt-3 gx-5">
-    <div class="col-lg-6">
+    <div class="col-xl-6">
       <div>
         <label for="bill-input" class="form-label mt-4 input-label">Bill</label>
         <div class="input-group">              
@@ -61,7 +61,7 @@
       </div>  
     </div>         
       
-    <div class="result col-lg-6 mt-4 px-4 py-5">      
+    <div class="result col-xl-6 mt-4 px-4 py-5">      
       <div class="row mb-3">
         <div class="col-6">
           <p>Tip Amount</p>
@@ -93,7 +93,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/hnvkhanh">Van Khanh</a>.
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
