--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div>
         <label for="bill-input" class="form-label mt-4 input-label">Bill</label>
         <div class="input-group">              
-          <input type="money" class="form-control text-end fs-2" id="bill-input" placeholder="0">
+          <input type="number" class="form-control text-end fs-2" id="bill-input" placeholder="0">
         </div>
       </div> 
       <div>
